deployment_manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-js
  name: node-js
  namespace: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    app: node-js
  type: ClusterIP
