deployment_manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-js-ingress
  namespace: frontend
  labels:
    app: node-js
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: node-js
            servicePort: 80
